--- a/docker/.env.example
+++ b/docker/.env.example
@@ -602,6 +602,22 @@ NGINX_PROXY_READ_TIMEOUT=3600s
 NGINX_PROXY_SEND_TIMEOUT=3600s
 
 # ------------------------------
+# Certbot Configuration
+# ------------------------------
+
+USE_CERTBOT_WEBHOOK=false
+
+# Email address (required to get certificates from Let's Encrypt)
+CERTBOT_EMAIL=your_email@example.com
+
+# Domain name
+CERTBOT_DOMAIN=your_domain.com
+
+# certbot command options
+# i.e: --test-cert
+CERTBOT_OPTIONS=
+
+# ------------------------------
 # Environment Variables for SSRF Proxy
 # ------------------------------
 SSRF_HTTP_PORT=3128
@@ -611,7 +627,7 @@ SSRF_SANDBOX_HOST=sandbox
 
 # ------------------------------
 # docker env var for specifying vector db type at startup
-# (based on the vector db type, the corresponding docker 
+# (based on the vector db type, the corresponding docker
 # compose profile will be used)
 # ------------------------------
 COMPOSE_PROFILES=${VECTOR_STORE:-weaviate}
