--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -358,6 +358,7 @@ services:
       NGINX_KEEPALIVE_TIMEOUT: ${NGINX_KEEPALIVE_TIMEOUT:-65}
       NGINX_PROXY_READ_TIMEOUT: ${NGINX_PROXY_READ_TIMEOUT:-3600s}
       NGINX_PROXY_SEND_TIMEOUT: ${NGINX_PROXY_SEND_TIMEOUT:-3600s}
+      NGINX_USE_CERTBOT_WEBHOOK: ${NGINX_USE_CERTBOT_WEBHOOK:-false}
     depends_on:
       - api
       - web
