CERTBOT_FORCE_UPDATE_ON_COMPOSE_UP=false

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -617,6 +617,9 @@ CERTBOT_DOMAIN=your_domain.com
 # i.e: --test-cert
 CERTBOT_OPTIONS=
 
+# true if want certbot excecutes certbot comamnd on compose up
+CERTBOT_FORCE_UPDATE_ON_COMPOSE_UP=false
+
 # ------------------------------
 # Environment Variables for SSRF Proxy
 # ------------------------------
