ssl のパス変更など。

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -614,7 +614,7 @@ CERTBOT_EMAIL=your_email@example.com
 CERTBOT_DOMAIN=your_domain.com
 
 # certbot command options
-# i.e: --test-cert
+# i.e: --force-renewal --dry-run --test-cert --debug
 CERTBOT_OPTIONS=
 
 # true if want certbot excecutes certbot comamnd on compose up
