--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -305,7 +305,7 @@ services:
       - ./volumes/certbot/conf:/etc/letsencrypt
       - ./volumes/certbot/www:/var/www/html
       - ./volumes/certbot/logs:/var/log/letsencrypt
-      - ./update-cert.sh.template:/update-cert.sh.template
+      - ./certbot/update-cert.sh.template:/update-cert.sh.template
     environment:
       - CERTBOT_EMAIL=${CERTBOT_EMAIL}
       - CERTBOT_DOMAIN=${CERTBOT_DOMAIN}
