--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -306,12 +306,12 @@ services:
       - ./volumes/certbot/www:/var/www/html
       - ./volumes/certbot/logs:/var/log/letsencrypt
       - ./certbot/update-cert.sh.template:/update-cert.sh.template
-      - ./certbot/docker-entrypoint.sh:/usr/local/bin/docker-entrypoint.sh
+      - ./certbot/docker-entrypoint.sh:/docker-entrypoint.sh
     environment:
       - CERTBOT_EMAIL=${CERTBOT_EMAIL}
       - CERTBOT_DOMAIN=${CERTBOT_DOMAIN}
       - CERTBOT_OPTIONS=${CERTBOT_OPTIONS}
-    entrypoint: ["/usr/local/bin/docker-entrypoint.sh"]
+    entrypoint: ["/docker-entrypoint.sh"]
     command: ["tail", "-f", "/dev/null"]  # Keep the container running
 
   # The nginx reverse proxy.
