--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -312,7 +312,7 @@ services:
       - CERTBOT_DOMAIN=${CERTBOT_DOMAIN}
       - CERTBOT_OPTIONS=${CERTBOT_OPTIONS}
     entrypoint: ["/docker-entrypoint.sh"]
-    command: ["tail", "-f", "/dev/null"]  # Keep the container running
+    command: sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'
 
   # The nginx reverse proxy.
   # used for reverse proxying the API service and Web service.
