--- a/docker/certbot/update-cert.sh.template
+++ b/docker/certbot/update-cert.sh.template
@@ -1,14 +1,27 @@
 #!/bin/bash
 
+# Check if the certificate already exists
+if [ -d "/etc/letsencrypt/live/${CERTBOT_DOMAIN}" ]; then
+  echo "Certificate exists. Attempting to renew..."
+  certbot renew --webroot --webroot-path=/var/www/html --email ${CERTBOT_EMAIL} --agree-tos --no-eff-email ${CERTBOT_OPTIONS}
+else
+  echo "Certificate does not exist. Obtaining a new certificate..."
+  certbot certonly --webroot --webroot-path=/var/www/html --email ${CERTBOT_EMAIL} --agree-tos --no-eff-email -d ${CERTBOT_DOMAIN} ${CERTBOT_OPTIONS}
+fi
 # Renew the certificate
 certbot renew --webroot --webroot-path=/var/www/html --email ${CERTBOT_EMAIL} --agree-tos --no-eff-email -d ${CERTBOT_DOMAIN} ${CERTBOT_OPTIONS}
 
 # Check the exit status
 if [ $? -eq 0 ]; then
-    echo "Certificate renewal successful"
-    # Reload Nginx to apply the new certificate
-    # This assumes Nginx is running in a separate container named 'nginx'
-    docker exec nginx nginx -s reload
+  echo "Certificate operation successful"
+  # Reload Nginx to apply the new certificate
+  # This assumes Nginx is running in a separate container named 'nginx'
+  docker exec nginx nginx -s reload
+  echo "Certificate renewal successful"
+  # Reload Nginx to apply the new certificate
+  # This assumes Nginx is running in a separate container named 'nginx'
+  docker exec nginx nginx -s reload
 else
-    echo "Certificate renewal failed"
+  echo "Certificate operation failed"
+  echo "Certificate renewal failed"
 fi
