--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -305,6 +305,7 @@ services:
       - ./volumes/certbot/conf:/etc/letsencrypt
       - ./volumes/certbot/www:/var/www/html
       - ./volumes/certbot/logs:/var/log/letsencrypt
+      - ./nginx/ssl:/etc/letsencrypt/live/${CERTBOT_DOMAIN}
       - ./certbot/update-cert.sh.template:/update-cert.sh.template
       - ./certbot/docker-entrypoint.sh:/docker-entrypoint.sh
     environment:
@@ -325,11 +326,11 @@ services:
       - ./nginx/https.conf.template:/etc/nginx/https.conf.template
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/docker-entrypoint.sh:/docker-entrypoint-mount.sh
+      - ./nginx/ssl:/etc/ssl
       # certbot volumes
-      # - ./nginx/ssl:/etc/ssl
       - ./volumes/certbot/conf:/etc/letsencrypt:ro
       - ./volumes/certbot/www:/var/www/html
-      - ./volumes/certbot/conf/live/${CERTBOT_DOMAIN}:/etc/ssl
+      # - ./volumes/certbot/conf/live/${CERTBOT_DOMAIN}:/etc/ssl
     entrypoint: [ "sh", "-c", "cp /docker-entrypoint-mount.sh /docker-entrypoint.sh && sed -i 's/\r$$//' /docker-entrypoint.sh && chmod +x /docker-entrypoint.sh && /docker-entrypoint.sh" ]
     environment:
       NGINX_SERVER_NAME: ${NGINX_SERVER_NAME:-_}
