--- a/docker/nginx/https.conf.template
+++ b/docker/nginx/https.conf.template
@@ -1,6 +1,8 @@
 # Please do not directly edit this file. Instead, modify the .env variables related to NGINX configuration.
 
 listen ${NGINX_SSL_PORT} ssl;
+ssl_certificate ./../ssl/${NGINX_SSL_CERT_FILENAME};
+ssl_certificate_key ./../ssl/${NGINX_SSL_CERT_KEY_FILENAME};
 ssl_certificate /etc/ssl/${NGINX_SSL_CERT_FILENAME};
 ssl_certificate_key /etc/ssl/${NGINX_SSL_CERT_KEY_FILENAME};
 ssl_protocols ${NGINX_SSL_PROTOCOLS};
