https.conf.template での条件分岐を記述。

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -313,7 +313,7 @@ services:
       - CERTBOT_EMAIL=${CERTBOT_EMAIL}
       - CERTBOT_DOMAIN=${CERTBOT_DOMAIN}
       - CERTBOT_OPTIONS=${CERTBOT_OPTIONS}
-    entrypoint: ["/docker-entrypoint.sh"]
+    entrypoint: [ "/docker-entrypoint.sh" ]
     command: sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'
 
   # The nginx reverse proxy.
@@ -351,6 +351,7 @@ services:
       NGINX_PROXY_READ_TIMEOUT: ${NGINX_PROXY_READ_TIMEOUT:-3600s}
       NGINX_PROXY_SEND_TIMEOUT: ${NGINX_PROXY_SEND_TIMEOUT:-3600s}
       NGINX_CREATE_CERTBOT_CHALNENGE_LOCATION: ${NGINX_CREATE_CERTBOT_CHALNENGE_LOCATION:-false}
+      CERTBOT_DOMAIN: ${CERTBOT_DOMAIN}
     depends_on:
       - api
       - web
