--- a/docker/nginx/https.conf.template
+++ b/docker/nginx/https.conf.template
@@ -2,21 +2,25 @@
 
 listen ${NGINX_SSL_PORT} ssl;
 
-# normal style (use docker certbot to generate)
-set $ssl_certificate "/etc/letsencrypt/live/${CERTBOT_DOMAIN}/${NGINX_SSL_CERT_FILENAME}";
-set $ssl_certificate_key "/etc/letsencrypt/live/${CERTBOT_DOMAIN}/${NGINX_SSL_CERT_KEY_FILENAME}";
+# cert files settings:
+set $domain_cert "/etc/letsencrypt/live/${CERTBOT_DOMAIN}/${NGINX_SSL_CERT_FILENAME}";
+set $domain_key "/etc/letsencrypt/live/${CERTBOT_DOMAIN}/${NGINX_SSL_CERT_KEY_FILENAME}";
+set $default_cert "/etc/letsencrypt/live/${NGINX_SSL_CERT_FILENAME}";
+set $default_key "/etc/letsencrypt/live/${NGINX_SSL_CERT_KEY_FILENAME}";
 
-# legacy style (put cert files in /etc/nginx/ssl on hand)
-if (!-f $ssl_certificate) {
-    set $ssl_certificate "/etc/letsencrypt/live/${NGINX_SSL_CERT_FILENAME}";
+## normal style (use docker certbot to generate)
+ssl_certificate $domain_cert;
+ssl_certificate_key $domain_key;
+
+## legacy style (put cert files in /etc/nginx/ssl on hand)
+if (!-f $domain_cert) {
+    ssl_certificate $default_cert;
 }
-if (!-f $ssl_certificate_key) {
-    set $ssl_certificate_key "/etc/letsencrypt/live/${NGINX_SSL_CERT_KEY_FILENAME}";
+if (!-f $domain_key) {
+    ssl_certificate_key $default_key;
 }
 
-ssl_certificate $ssl_certificate;
-ssl_certificate_key $ssl_certificate_key;
-
+# security settings
 ssl_protocols ${NGINX_SSL_PROTOCOLS};
 ssl_prefer_server_ciphers on;
 ssl_session_cache shared:SSL:10m;
