--- a/docker/nginx/https.conf.template
+++ b/docker/nginx/https.conf.template
@@ -1,28 +1,13 @@
 # Please do not directly edit this file. Instead, modify the .env variables related to NGINX configuration.
 
 listen ${NGINX_SSL_PORT} ssl;
-
-# cert files settings:
-set $domain_cert "/etc/letsencrypt/live/${CERTBOT_DOMAIN}/${NGINX_SSL_CERT_FILENAME}";
-set $domain_key "/etc/letsencrypt/live/${CERTBOT_DOMAIN}/${NGINX_SSL_CERT_KEY_FILENAME}";
-set $default_cert "/etc/letsencrypt/live/${NGINX_SSL_CERT_FILENAME}";
-set $default_key "/etc/letsencrypt/live/${NGINX_SSL_CERT_KEY_FILENAME}";
-
-## normal style (use docker certbot to generate)
-ssl_certificate $domain_cert;
-ssl_certificate_key $domain_key;
-
-## legacy style (put cert files in /etc/nginx/ssl on hand)
-if (!-f $domain_cert) {
-    ssl_certificate $default_cert;
-}
-if (!-f $domain_key) {
-    ssl_certificate_key $default_key;
-}
-
-# security settings
+ssl_certificate /etc/letsencrypt/live/${CERTBOT_DOMAIN}/${NGINX_SSL_CERT_FILENAME};
+ssl_certificate_key /etc/letsencrypt/live/${CERTBOT_DOMAIN}/${NGINX_SSL_CERT_KEY_FILENAME};
 ssl_protocols ${NGINX_SSL_PROTOCOLS};
 ssl_prefer_server_ciphers on;
 ssl_session_cache shared:SSL:10m;
 ssl_session_timeout 10m;
 
+# Fallback to default SSL certificate if domain-specific certificate is not found (legacy)
+ssl_certificate /etc/letsencrypt/live/${NGINX_SSL_CERT_FILENAME};
+ssl_certificate_key /etc/letsencrypt/live/${NGINX_SSL_CERT_KEY_FILENAME};
