CERTBOT_DOMAIN がブランクのときにも処理をスキップ。

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -306,7 +306,6 @@ services:
       - ./volumes/certbot/www:/var/www/html
       - ./volumes/certbot/logs:/var/log/letsencrypt
       - ./volumes/certbot/conf/live:/etc/letsencrypt/live
-      # - ./nginx/ssl:/etc/letsencrypt/live/
       - ./certbot/update-cert.sh.template:/update-cert.sh.template
       - ./certbot/docker-entrypoint.sh:/docker-entrypoint.sh
     environment:
@@ -327,9 +326,8 @@ services:
       - ./nginx/https.conf.template:/etc/nginx/https.conf.template
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/docker-entrypoint.sh:/docker-entrypoint-mount.sh
-      # cert dirs
-      - ./nginx/ssl:/etc/ssl # legacy
-      - ./volumes/certbot/conf/live:/etc/letsencrypt/live # use certbot container
+      - ./nginx/ssl:/etc/ssl # cert dir (legacy)
+      - ./volumes/certbot/conf/live:/etc/letsencrypt/live # cert dir (with certbot container)
       - ./volumes/certbot/conf:/etc/letsencrypt
       - ./volumes/certbot/www:/var/www/html
     entrypoint: [ "sh", "-c", "cp /docker-entrypoint-mount.sh /docker-entrypoint.sh && sed -i 's/\r$$//' /docker-entrypoint.sh && chmod +x /docker-entrypoint.sh && /docker-entrypoint.sh" ]
@@ -349,7 +347,7 @@ services:
       NGINX_PROXY_READ_TIMEOUT: ${NGINX_PROXY_READ_TIMEOUT:-3600s}
       NGINX_PROXY_SEND_TIMEOUT: ${NGINX_PROXY_SEND_TIMEOUT:-3600s}
       NGINX_CREATE_CERTBOT_CHALLENGE_LOCATION: ${NGINX_CREATE_CERTBOT_CHALLENGE_LOCATION:-false}
-      CERTBOT_DOMAIN: ${CERTBOT_DOMAIN}
+      CERTBOT_DOMAIN: ${CERTBOT_DOMAIN:-}
     depends_on:
       - api
       - web
